@@ -1,3 +1,7 @@
+2003-12-19  Werner Koch  <wk@gnupg.org>
+
+	* g10lib.h (wipememory, wipememory2): New; taken from gnupg.
+
 2003-11-14  Werner Koch  <wk@gnupg.org>
 
 	* global.c (gcry_strdup): Don't copy the string after a malloc
